--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
-    "react": "^14.13.1",
+    "react": "15.0.2",
     "react-dom": "^14.13.1",
     "react-scripts": "^3.4.1"
   },
